fix #678, corrected logger config default, and check in Server.php

--- a/src/pocketmine/resources/pocketmine.yml
+++ b/src/pocketmine/resources/pocketmine.yml
@@ -163,7 +163,7 @@ aliases:
 
 log:
  # Whether to save server log information to disk (console.log).
- enable: true
+ enable: false
 
 hunger:
  # Toggling switch to enable or disable hunger.
